fix moon phase on mobile
.moon-phase.inner on mobile was not being masked by moon-phase.outer on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1396,7 +1396,6 @@ table#forecast .sticky-col > div > span:last-child {
     background-color: #29465d;
     display: inline-block;
     border-radius: 72px;
-    position: relative;
     float: right;
 }
 
